--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   <body>
     <header>head</header>
     <main>main</main>
-    <footer>Footer</footer>
+    <footer class="style">Footer</footer>
   </body>
 </html>
