--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
   </head>
   <body>
     <header>head</header>
-    <main>main</main>
+    <main>
+      <p>main</p>
+    </main>
     <footer class="style">Footer</footer>
+    <h2>Hey</h2>
   </body>
 </html>
