--- a/index.html
+++ b/index.html
@@ -10,8 +10,16 @@
     <header>head</header>
     <main>
       <p>main</p>
+      <button>
+        <p>HelloS</p>
+      </button>
     </main>
-    <footer class="style">Footer</footer>
+    <footer class="style">
+      <p>Footer</p>
+      <button style="size: 30px; width: 40mm">
+        <p>Bye</p>
+      </button>
+    </footer>
     <h2>Hey</h2>
   </body>
 </html>
